--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="images/video.svg">
     <title>YouTube Video Downloader</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -28,12 +29,20 @@
         <form action="/search" method="get">
             <div class="form-group">
                 <input type="text" name="url" class="form-control" placeholder="Enter YouTube video URL" required>
-                <button type="submit" class="btn"><i class="fas fa-search"></i> Search</button>
+                <button type="submit" class="btn"><i class="fas fa-search"></i></button>
             </div>
         </form>
     </div>
+    
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <footer class="footer mt-auto py-3">
+        <div class="container text-center">
+            <span class="text-muted">Nep-YTDL &copy; 2024</span>
+        </div>
+    </footer>
+
 </body>
 </html>
