fixed bugs and improved performance

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -6,106 +6,11 @@
     <title>Nep-YTDL - YouTube Video Downloader</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    
-    <style>
-        body {
-            background-color: #141414;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            color: #fff;
-            margin: 0;
-            padding: 0;
-        }
-
-        .navbar {
-            background-color: #222;
-            padding: 10px 0;
-            text-align: center;
-        }
-
-        .navbar img {
-            height: 50px;
-            margin-top: 5px;
-        }
-
-        .container {
-            max-width: 600px;
-            margin: 50px auto;
-            background-color: #222;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-        }
-
-        h1 {
-            text-align: center;
-            margin-bottom: 30px;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-        }
-
-        video {
-            display: block;
-            max-width: 100%;
-            height: auto;
-            margin: 0 auto 20px;
-            border-radius: 5px;
-        }
-
-        .dropdown {
-            margin-bottom: 20px;
-        }
-
-        .dropdown select {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #333;
-            border-radius: 5px;
-            background-color: #222;
-            color: #fff;
-            font-size: 16px;
-        }
-
-        .list-group-item {
-            background-color: transparent;
-            border: none;
-            padding: 10px 0;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .btn {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #e50914;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            text-align: center;
-            transition: background-color 0.3s ease;
-            font-weight: bold;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            text-decoration: none; /* Remove default underline */
-        }
-
-        .btn:hover {
-            background-color: #b00710;
-        }
-
-        .btn i {
-            margin-right: 5px;
-        }
-
-        .download-icon {
-            color: #fff;
-            font-size: 18px;
-        }
-    </style>
+    <link rel="stylesheet" href="css/results.css">
 </head>
 <body>
     <div class="navbar">
-        <img src="youtube-logo.png" alt="YouTube Logo">
+        <img src="images/video.svg" alt="YouTube Logo">
     </div>
 
     <div class="container">
